# v2raysub

./: .flake8  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  requirements.txt  setup.cfg  setup.py  v2sub.py
.github/workflows/: build-and-test-v2sub.yml  release-v2sub.yml
tests/: test_cli.py  test_plugin.py  test_protocol_parse.py
v2raysub/: app.py  cli.py  config.py  protocol.py  service.py  util.py  v2submain.py
