[metadata]
name = v2raysub
version = attr: v2raysub.__version__
description = subscription and config generation tool for v2ray
author = hzq
author_email = 604916833@qq.com
url = https://github.com/12CrazyPaul21/v2raysub
project_urls =
    Source = https://github.com/12CrazyPaul21/v2raysub
keywords =
    v2ray
    config
    subscribe
    proxy
    proxychains
license = Apache License, Version 2.0
license_files = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Topic :: Software Development :: Build Tools
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    v2sub = v2raysub.cli:main

[options.packages.find]
include = v2raysub, v2raysub.*

[tool.pytest]
addopts = --exitfirst
python_files =
    tests/test_*.py